--- a/articles/個人開発でデザインするときに目を通すべきサイト+素材集.md
+++ b/articles/個人開発でデザインするときに目を通すべきサイト+素材集.md
@@ -1,4 +1,17 @@
+--- title: "個人開発でデザインするときに目を通すべきサイト+素材集"
+
+emoji: "📰" 
+
+type: "tech" 
+
+topics: ["情報収集","デザイン"] 
+
+published: **false**  ---
+
+
+
 # はじめに
+
 個人開発をする際に、毎回デザインどうしようかで結構悩んでしまいます。
 そんな時に目を通すべきサイトのまとめがあったらうれしいと思ったので、紹介します。
 
