--- a/articles/技術の情報収集やトレンドを抑えるためにおすすめのサイト.md
+++ b/articles/技術の情報収集やトレンドを抑えるためにおすすめのサイト.md
@@ -1,4 +1,17 @@
+--- title: "技術の情報収集やトレンドを抑えるためにおすすめのサイト"
+
+emoji: "📰" 
+
+type: "tech" 
+
+topics: ["情報収集"] 
+
+published: **false**  ---
+
+
+
 # はじめに
+
 情報収集やトレンドを抑えるために眺めてるサイトをまとめました。
 
 # ニュース
